1.18.1/README.md
### 1.18.1, 1181_
- Started: `2022-09-03T12:07:24.043Z`
- Username: `1181_`

| Packet Normalized | Packet Name | Time |
|---|---|---|
| Compress | compress | 795.0ms
| Success | success | 804.0ms
| CustomPayload | custom_payload | 1156.0ms
| CustomPayload | custom_payload | 1161.0ms
| Login | login | 1439.0ms
| CustomPayload | custom_payload | 1448.0ms
| Difficulty | difficulty | 1453.0ms
| Abilities | abilities | 1458.0ms
| HeldItemSlot | held_item_slot | 1463.0ms
| DeclareRecipes | declare_recipes | 1906.0ms
| Tags | tags | 1953.0ms
| EntityStatus | entity_status | 1958.0ms
| Position | position | 1967.0ms
| Chat | chat | 1977.0ms
| PlayerInfo | player_info | 1984.0ms
| PlayerInfo | player_info | 1988.0ms
| PlayerInfo | player_info | 1994.0ms
| UpdateViewDistance | update_view_distance | 1998.0ms
| SimulationDistance | simulation_distance | 2003.0ms
| UpdateViewPosition | update_view_position | 2008.0ms
| SpawnEntity | spawn_entity | 2014.0ms
| EntityMetadata | entity_metadata | 2022.0ms
| NamedEntitySpawn | named_entity_spawn | 2029.0ms
| EntityMetadata | entity_metadata | 2034.0ms
| EntityUpdateAttributes | entity_update_attributes | 2040.0ms
| SpawnEntityLiving | spawn_entity_living | 2047.0ms
| EntityMetadata | entity_metadata | 2052.0ms
| EntityUpdateAttributes | entity_update_attributes | 2056.0ms
| EntityMetadata | entity_metadata | 2062.0ms
| InitializeWorldBorder | initialize_world_border | 2067.0ms
| SpawnPosition | spawn_position | 2073.0ms
| WindowItems | window_items | 2114.0ms
| UpdateHealth | update_health | 2120.0ms
| Experience | experience | 2126.0ms
| EntityUpdateAttributes | entity_update_attributes | 2176.0ms
| Advancements | advancements | 2183.0ms
| EntityTeleport | entity_teleport | 2271.0ms
| DeclareCommands | declare_commands | 2290.0ms
| EntityLook | entity_look | 2512.0ms
| NamedSoundEffect | named_sound_effect | 2643.0ms
| EntityLook | entity_look | 3246.0ms
| EntityStatus | entity_status | 3628.0ms
| NamedSoundEffect | named_sound_effect | 3636.0ms
| SpawnEntity | spawn_entity | 3642.0ms
| EntityMetadata | entity_metadata | 3647.0ms
| SpawnEntity | spawn_entity | 3654.0ms
| EntityMetadata | entity_metadata | 3659.0ms
| EntityStatus | entity_status | 3665.0ms
| EntityDestroy | entity_destroy | 3671.0ms
| EntityMetadata | entity_metadata | 3679.0ms
| EntityTeleport | entity_teleport | 4043.0ms
| EntityDestroy | entity_destroy | 4375.0ms
| EntityDestroy | entity_destroy | 4378.0ms
| EntityStatus | entity_status | 4569.0ms
| EntityDestroy | entity_destroy | 4575.0ms
| PlayerInfo | player_info | 6476.0ms
| Chat | chat | 7229.0ms
| PlayerInfo | player_info | 7232.0ms
| NamedEntitySpawn | named_entity_spawn | 7235.0ms
| EntityMetadata | entity_metadata | 7239.0ms
| EntityUpdateAttributes | entity_update_attributes | 7243.0ms
| EntityTeleport | entity_teleport | 7246.0ms
| EntityUpdateAttributes | entity_update_attributes | 7249.0ms
| EntityLook | entity_look | 7252.0ms
| EntityTeleport | entity_teleport | 7255.0ms
| EntityLook | entity_look | 7257.0ms
| EntityEquipment | entity_equipment | 10711.0ms
| EntityEquipment | entity_equipment | 11242.0ms
| EntityLook | entity_look | 11772.0ms
| PlayerInfo | player_info | 11775.0ms
| EntityLook | entity_look | 11778.0ms
| Chat | chat | 11820.0ms
| PlayerInfo | player_info | 11823.0ms
| NamedEntitySpawn | named_entity_spawn | 11825.0ms
| EntityMetadata | entity_metadata | 11829.0ms
| EntityUpdateAttributes | entity_update_attributes | 11833.0ms
| EntityTeleport | entity_teleport | 11853.0ms
| EntityUpdateAttributes | entity_update_attributes | 11857.0ms
| EntityLook | entity_look | 11860.0ms
| EntityTeleport | entity_teleport | 11864.0ms
| NamedSoundEffect | named_sound_effect | 12291.0ms
| SpawnEntityLiving | spawn_entity_living | 12295.0ms
| EntityMetadata | entity_metadata | 12299.0ms
| EntityUpdateAttributes | entity_update_attributes | 12301.0ms
| Animation | animation | 12305.0ms
| EntityUpdateAttributes | entity_update_attributes | 12309.0ms
| EntityTeleport | entity_teleport | 12313.0ms
| EntityUpdateAttributes | entity_update_attributes | 12316.0ms
| NamedSoundEffect | named_sound_effect | 12319.0ms
| EntityLook | entity_look | 12323.0ms
| NamedSoundEffect | named_sound_effect | 12325.0ms
| EntityLook | entity_look | 12401.0ms
| EntityLook | entity_look | 12404.0ms
| NamedSoundEffect | named_sound_effect | 12498.0ms
| NamedSoundEffect | named_sound_effect | 12675.0ms
| NamedSoundEffect | named_sound_effect | 12754.0ms
| NamedSoundEffect | named_sound_effect | 12912.0ms
| SpawnEntity | spawn_entity | 13107.0ms
| EntityMetadata | entity_metadata | 13110.0ms
| EntityLook | entity_look | 13113.0ms
| EntityEquipment | entity_equipment | 13116.0ms
| EntityLook | entity_look | 13196.0ms
| EntityLook | entity_look | 13301.0ms
| NamedSoundEffect | named_sound_effect | 13304.0ms
| NamedSoundEffect | named_sound_effect | 13349.0ms
| EntityLook | entity_look | 13422.0ms
| EntityLook | entity_look | 13495.0ms
| EntityLook | entity_look | 13604.0ms
| EntityMetadata | entity_metadata | 13607.0ms
| EntityMetadata | entity_metadata | 13649.0ms
| EntityLook | entity_look | 13745.0ms
| NamedSoundEffect | named_sound_effect | 13758.0ms
| EntityLook | entity_look | 13897.0ms
| NamedSoundEffect | named_sound_effect | 13945.0ms
| EntityLook | entity_look | 13991.0ms
| NamedSoundEffect | named_sound_effect | 14204.0ms
| NamedSoundEffect | named_sound_effect | 14545.0ms
| EntityLook | entity_look | 14650.0ms
| NamedSoundEffect | named_sound_effect | 14652.0ms
| NamedSoundEffect | named_sound_effect | 15046.0ms
| EntityTeleport | entity_teleport | 15099.0ms
| EntityMetadata | entity_metadata | 15153.0ms
| NamedSoundEffect | named_sound_effect | 15155.0ms
| EntityMetadata | entity_metadata | 15196.0ms
| NamedSoundEffect | named_sound_effect | 15495.0ms
| NamedSoundEffect | named_sound_effect | 15778.0ms
| KeepAlive | keep_alive | 15847.0ms
| NamedSoundEffect | named_sound_effect | 15945.0ms
| EntityTeleport | entity_teleport | 16108.0ms
| NamedSoundEffect | named_sound_effect | 16507.0ms
| NamedSoundEffect | named_sound_effect | 16511.0ms
| EntityLook | entity_look | 16515.0ms
| EntityTeleport | entity_teleport | 16661.0ms
| PlayerInfo | player_info | 17028.0ms
| Chat | chat | 17080.0ms
| PlayerInfo | player_info | 17084.0ms
| NamedEntitySpawn | named_entity_spawn | 17087.0ms
| EntityMetadata | entity_metadata | 17091.0ms
| EntityUpdateAttributes | entity_update_attributes | 17094.0ms
| EntityTeleport | entity_teleport | 17097.0ms
| EntityUpdateAttributes | entity_update_attributes | 17099.0ms
| EntityTeleport | entity_teleport | 17102.0ms
| NamedSoundEffect | named_sound_effect | 17105.0ms
| NamedSoundEffect | named_sound_effect | 17110.0ms
| NamedSoundEffect | named_sound_effect | 17707.0ms
| NamedSoundEffect | named_sound_effect | 17712.0ms
| EntityTeleport | entity_teleport | 17718.0ms
| NamedSoundEffect | named_sound_effect | 17762.0ms
| NamedSoundEffect | named_sound_effect | 17878.0ms
| NamedSoundEffect | named_sound_effect | 17881.0ms
| NamedSoundEffect | named_sound_effect | 18197.0ms
| NamedSoundEffect | named_sound_effect | 18202.0ms
| NamedSoundEffect | named_sound_effect | 18547.0ms
| NamedSoundEffect | named_sound_effect | 18675.0ms
| NamedSoundEffect | named_sound_effect | 18677.0ms
| NamedSoundEffect | named_sound_effect | 19002.0ms
| NamedSoundEffect | named_sound_effect | 19145.0ms
| NamedSoundEffect | named_sound_effect | 19448.0ms
| NamedSoundEffect | named_sound_effect | 19546.0ms
| NamedSoundEffect | named_sound_effect | 19600.0ms
| NamedSoundEffect | named_sound_effect | 19867.0ms
| NamedSoundEffect | named_sound_effect | 20102.0ms
| NamedSoundEffect | named_sound_effect | 20309.0ms
| NamedSoundEffect | named_sound_effect | 20431.0ms
| NamedSoundEffect | named_sound_effect | 20580.0ms
| NamedSoundEffect | named_sound_effect | 20763.0ms
| NamedSoundEffect | named_sound_effect | 21046.0ms
| NamedSoundEffect | named_sound_effect | 21196.0ms
| NamedSoundEffect | named_sound_effect | 21293.0ms
| NamedSoundEffect | named_sound_effect | 21780.0ms
| NamedSoundEffect | named_sound_effect | 21784.0ms
| NamedSoundEffect | named_sound_effect | 21786.0ms
| PlayerInfo | player_info | 22244.0ms
| NamedSoundEffect | named_sound_effect | 22246.0ms
| Chat | chat | 22279.0ms
| PlayerInfo | player_info | 22283.0ms
| NamedEntitySpawn | named_entity_spawn | 22287.0ms
| EntityMetadata | entity_metadata | 22291.0ms
| EntityUpdateAttributes | entity_update_attributes | 22294.0ms
| EntityTeleport | entity_teleport | 22400.0ms
| EntityUpdateAttributes | entity_update_attributes | 22403.0ms
| EntityTeleport | entity_teleport | 22705.0ms
| NamedSoundEffect | named_sound_effect | 22708.0ms
| PlayerInfo | player_info | 22714.0ms
| NamedSoundEffect | named_sound_effect | 22814.0ms
| NamedSoundEffect | named_sound_effect | 22817.0ms
| NamedSoundEffect | named_sound_effect | 22820.0ms
| NamedSoundEffect | named_sound_effect | 23092.0ms
| NamedSoundEffect | named_sound_effect | 23439.0ms
| NamedSoundEffect | named_sound_effect | 23521.0ms
| EntityLook | entity_look | 23646.0ms
| NamedSoundEffect | named_sound_effect | 23669.0ms
| NamedSoundEffect | named_sound_effect | 23689.0ms
| NamedSoundEffect | named_sound_effect | 23713.0ms
| NamedSoundEffect | named_sound_effect | 23765.0ms
| NamedSoundEffect | named_sound_effect | 23893.0ms
| NamedSoundEffect | named_sound_effect | 23897.0ms
| NamedSoundEffect | named_sound_effect | 24384.0ms
| NamedSoundEffect | named_sound_effect | 24387.0ms
| NamedSoundEffect | named_sound_effect | 24473.0ms
| NamedSoundEffect | named_sound_effect | 24545.0ms
| NamedSoundEffect | named_sound_effect | 24779.0ms
| NamedSoundEffect | named_sound_effect | 24802.0ms
| NamedSoundEffect | named_sound_effect | 25196.0ms
| NamedSoundEffect | named_sound_effect | 25250.0ms
| NamedSoundEffect | named_sound_effect | 25297.0ms
| NamedSoundEffect | named_sound_effect | 25647.0ms
| NamedSoundEffect | named_sound_effect | 25695.0ms
| NamedSoundEffect | named_sound_effect | 25710.0ms
| NamedSoundEffect | named_sound_effect | 26163.0ms
| NamedSoundEffect | named_sound_effect | 26173.0ms
| NamedSoundEffect | named_sound_effect | 26190.0ms
| NamedSoundEffect | named_sound_effect | 26597.0ms
| NamedSoundEffect | named_sound_effect | 26602.0ms
| EntityLook | entity_look | 26678.0ms
| NamedSoundEffect | named_sound_effect | 26765.0ms
| NamedSoundEffect | named_sound_effect | 26959.0ms
| PlayerInfo | player_info | 27188.0ms
| Chat | chat | 27342.0ms
| PlayerInfo | player_info | 27345.0ms
| NamedEntitySpawn | named_entity_spawn | 27347.0ms
| EntityMetadata | entity_metadata | 27351.0ms
| EntityUpdateAttributes | entity_update_attributes | 27354.0ms
| EntityTeleport | entity_teleport | 27357.0ms
| EntityUpdateAttributes | entity_update_attributes | 27359.0ms
| NamedSoundEffect | named_sound_effect | 27362.0ms
| NamedSoundEffect | named_sound_effect | 27365.0ms
| EntityTeleport | entity_teleport | 27367.0ms
| NamedSoundEffect | named_sound_effect | 27498.0ms
| NamedSoundEffect | named_sound_effect | 27500.0ms
| NamedSoundEffect | named_sound_effect | 27619.0ms
| NamedSoundEffect | named_sound_effect | 27747.0ms
| NamedSoundEffect | named_sound_effect | 27750.0ms
| NamedSoundEffect | named_sound_effect | 27780.0ms
| NamedSoundEffect | named_sound_effect | 27783.0ms
| NamedSoundEffect | named_sound_effect | 28052.0ms
| NamedSoundEffect | named_sound_effect | 28057.0ms
| NamedSoundEffect | named_sound_effect | 28164.0ms
| NamedSoundEffect | named_sound_effect | 28308.0ms
| NamedSoundEffect | named_sound_effect | 28406.0ms
| NamedSoundEffect | named_sound_effect | 28523.0ms
| NamedSoundEffect | named_sound_effect | 28606.0ms
| NamedSoundEffect | named_sound_effect | 28679.0ms
| NamedSoundEffect | named_sound_effect | 28682.0ms
| NamedSoundEffect | named_sound_effect | 28696.0ms
| NamedSoundEffect | named_sound_effect | 28718.0ms
| NamedSoundEffect | named_sound_effect | 28902.0ms
| EntityTeleport | entity_teleport | 29054.0ms
| NamedSoundEffect | named_sound_effect | 29088.0ms
| NamedSoundEffect | named_sound_effect | 29171.0ms
| NamedSoundEffect | named_sound_effect | 29188.0ms
| NamedSoundEffect | named_sound_effect | 29221.0ms
| NamedSoundEffect | named_sound_effect | 29223.0ms
| NamedSoundEffect | named_sound_effect | 29502.0ms
| NamedSoundEffect | named_sound_effect | 29513.0ms
| NamedSoundEffect | named_sound_effect | 29517.0ms
| NamedSoundEffect | named_sound_effect | 29563.0ms
| NamedSoundEffect | named_sound_effect | 29659.0ms
| NamedSoundEffect | named_sound_effect | 29808.0ms
| NamedSoundEffect | named_sound_effect | 29903.0ms
| NamedSoundEffect | named_sound_effect | 30008.0ms
| NamedSoundEffect | named_sound_effect | 30041.0ms
| NamedSoundEffect | named_sound_effect | 30069.0ms
| NamedSoundEffect | named_sound_effect | 30150.0ms
| NamedSoundEffect | named_sound_effect | 30353.0ms
| NamedSoundEffect | named_sound_effect | 30458.0ms
| NamedSoundEffect | named_sound_effect | 30513.0ms
| NamedSoundEffect | named_sound_effect | 30518.0ms
| NamedSoundEffect | named_sound_effect | 30620.0ms
| NamedSoundEffect | named_sound_effect | 30719.0ms
| KeepAlive | keep_alive | 30873.0ms
| NamedSoundEffect | named_sound_effect | 30878.0ms
| NamedSoundEffect | named_sound_effect | 30973.0ms
| NamedSoundEffect | named_sound_effect | 30976.0ms
| NamedSoundEffect | named_sound_effect | 30981.0ms
| NamedSoundEffect | named_sound_effect | 31210.0ms
| NamedSoundEffect | named_sound_effect | 31256.0ms
| NamedSoundEffect | named_sound_effect | 31408.0ms
| NamedSoundEffect | named_sound_effect | 31412.0ms
| NamedSoundEffect | named_sound_effect | 31499.0ms
| NamedSoundEffect | named_sound_effect | 31571.0ms
| NamedSoundEffect | named_sound_effect | 31576.0ms
| EntityTeleport | entity_teleport | 31596.0ms
| NamedSoundEffect | named_sound_effect | 31857.0ms
| NamedSoundEffect | named_sound_effect | 31861.0ms
| NamedSoundEffect | named_sound_effect | 31994.0ms
| NamedSoundEffect | named_sound_effect | 31999.0ms
| NamedSoundEffect | named_sound_effect | 32115.0ms
| PlayerInfo | player_info | 32316.0ms
| Chat | chat | 32441.0ms
| PlayerInfo | player_info | 32448.0ms
| NamedEntitySpawn | named_entity_spawn | 32497.0ms
| EntityMetadata | entity_metadata | 32500.0ms
| EntityUpdateAttributes | entity_update_attributes | 32502.0ms
| EntityTeleport | entity_teleport | 32505.0ms
| EntityUpdateAttributes | entity_update_attributes | 32507.0ms
| EntityTeleport | entity_teleport | 32559.0ms
| NamedSoundEffect | named_sound_effect | 32562.0ms
| NamedSoundEffect | named_sound_effect | 32788.0ms
| NamedSoundEffect | named_sound_effect | 32793.0ms
| NamedSoundEffect | named_sound_effect | 32795.0ms
| NamedSoundEffect | named_sound_effect | 32797.0ms
| NamedSoundEffect | named_sound_effect | 32800.0ms
| NamedSoundEffect | named_sound_effect | 32803.0ms
| NamedSoundEffect | named_sound_effect | 32805.0ms
| NamedSoundEffect | named_sound_effect | 32810.0ms
| NamedSoundEffect | named_sound_effect | 32812.0ms
| NamedSoundEffect | named_sound_effect | 32975.0ms
| NamedSoundEffect | named_sound_effect | 32997.0ms
| NamedSoundEffect | named_sound_effect | 33093.0ms
| NamedSoundEffect | named_sound_effect | 33095.0ms
| NamedSoundEffect | named_sound_effect | 33198.0ms
| NamedSoundEffect | named_sound_effect | 33218.0ms
| NamedSoundEffect | named_sound_effect | 33390.0ms
| NamedSoundEffect | named_sound_effect | 33405.0ms
| NamedSoundEffect | named_sound_effect | 33467.0ms
| NamedSoundEffect | named_sound_effect | 33503.0ms
| NamedSoundEffect | named_sound_effect | 33557.0ms
| NamedSoundEffect | named_sound_effect | 33658.0ms
| NamedSoundEffect | named_sound_effect | 33893.0ms
| NamedSoundEffect | named_sound_effect | 33919.0ms
| NamedSoundEffect | named_sound_effect | 33923.0ms
| NamedSoundEffect | named_sound_effect | 33975.0ms
| NamedSoundEffect | named_sound_effect | 33980.0ms
| NamedSoundEffect | named_sound_effect | 34055.0ms
| NamedSoundEffect | named_sound_effect | 34172.0ms
| NamedSoundEffect | named_sound_effect | 34175.0ms
| NamedSoundEffect | named_sound_effect | 34444.0ms
| NamedSoundEffect | named_sound_effect | 34568.0ms
| NamedSoundEffect | named_sound_effect | 34570.0ms
| NamedSoundEffect | named_sound_effect | 34574.0ms
| EntityLook | entity_look | 34577.0ms
| NamedSoundEffect | named_sound_effect | 34579.0ms
| NamedSoundEffect | named_sound_effect | 34581.0ms
| NamedSoundEffect | named_sound_effect | 34833.0ms
| NamedSoundEffect | named_sound_effect | 34878.0ms
| NamedSoundEffect | named_sound_effect | 34883.0ms
| NamedSoundEffect | named_sound_effect | 34888.0ms
| NamedSoundEffect | named_sound_effect | 34890.0ms
| NamedSoundEffect | named_sound_effect | 35063.0ms
| NamedSoundEffect | named_sound_effect | 35200.0ms
| NamedSoundEffect | named_sound_effect | 35204.0ms
| NamedSoundEffect | named_sound_effect | 35211.0ms
| NamedSoundEffect | named_sound_effect | 35278.0ms
| NamedSoundEffect | named_sound_effect | 35281.0ms
| NamedSoundEffect | named_sound_effect | 35413.0ms
| NamedSoundEffect | named_sound_effect | 35489.0ms
| NamedSoundEffect | named_sound_effect | 35562.0ms
| NamedSoundEffect | named_sound_effect | 35600.0ms
| NamedSoundEffect | named_sound_effect | 35652.0ms
| NamedSoundEffect | named_sound_effect | 35768.0ms
| NamedSoundEffect | named_sound_effect | 35806.0ms
| NamedSoundEffect | named_sound_effect | 35951.0ms
| NamedSoundEffect | named_sound_effect | 35953.0ms
| NamedSoundEffect | named_sound_effect | 36057.0ms
| NamedSoundEffect | named_sound_effect | 36108.0ms
| NamedSoundEffect | named_sound_effect | 36113.0ms
| NamedSoundEffect | named_sound_effect | 36166.0ms
| NamedSoundEffect | named_sound_effect | 36294.0ms
| NamedSoundEffect | named_sound_effect | 36430.0ms
| NamedSoundEffect | named_sound_effect | 36433.0ms
| NamedSoundEffect | named_sound_effect | 36512.0ms
| NamedSoundEffect | named_sound_effect | 36515.0ms
| NamedSoundEffect | named_sound_effect | 36714.0ms
| NamedSoundEffect | named_sound_effect | 36773.0ms
| NamedSoundEffect | named_sound_effect | 36800.0ms
| NamedSoundEffect | named_sound_effect | 36803.0ms
| EntityTeleport | entity_teleport | 36844.0ms
| NamedSoundEffect | named_sound_effect | 36949.0ms
| NamedSoundEffect | named_sound_effect | 36957.0ms
| EntityLook | entity_look | 37058.0ms
| NamedSoundEffect | named_sound_effect | 37062.0ms
| NamedSoundEffect | named_sound_effect | 37134.0ms
| NamedSoundEffect | named_sound_effect | 37186.0ms
| PlayerInfo | player_info | 37434.0ms
| NamedSoundEffect | named_sound_effect | 37436.0ms
| Chat | chat | 37614.0ms
| PlayerInfo | player_info | 37616.0ms
| NamedEntitySpawn | named_entity_spawn | 37618.0ms
| EntityMetadata | entity_metadata | 37621.0ms
| EntityUpdateAttributes | entity_update_attributes | 37624.0ms
| EntityTeleport | entity_teleport | 37626.0ms
| EntityUpdateAttributes | entity_update_attributes | 37628.0ms
| EntityTeleport | entity_teleport | 37631.0ms
| NamedSoundEffect | named_sound_effect | 37749.0ms
| NamedSoundEffect | named_sound_effect | 37751.0ms
| NamedSoundEffect | named_sound_effect | 37755.0ms
| NamedSoundEffect | named_sound_effect | 37758.0ms
| NamedSoundEffect | named_sound_effect | 37761.0ms
| NamedSoundEffect | named_sound_effect | 37763.0ms
| NamedSoundEffect | named_sound_effect | 37765.0ms
| NamedSoundEffect | named_sound_effect | 37768.0ms
| NamedSoundEffect | named_sound_effect | 37950.0ms
| NamedSoundEffect | named_sound_effect | 37975.0ms
| NamedSoundEffect | named_sound_effect | 37978.0ms
| NamedSoundEffect | named_sound_effect | 38013.0ms
| NamedSoundEffect | named_sound_effect | 38072.0ms
| NamedSoundEffect | named_sound_effect | 38074.0ms
| NamedSoundEffect | named_sound_effect | 38076.0ms
| NamedSoundEffect | named_sound_effect | 38163.0ms
| NamedSoundEffect | named_sound_effect | 38165.0ms
| NamedSoundEffect | named_sound_effect | 38227.0ms
| NamedSoundEffect | named_sound_effect | 38229.0ms
| NamedSoundEffect | named_sound_effect | 38261.0ms
| NamedSoundEffect | named_sound_effect | 38356.0ms
| NamedSoundEffect | named_sound_effect | 38409.0ms
| NamedSoundEffect | named_sound_effect | 38463.0ms
| NamedSoundEffect | named_sound_effect | 38472.0ms
| NamedSoundEffect | named_sound_effect | 38682.0ms
| NamedSoundEffect | named_sound_effect | 38685.0ms
| NamedSoundEffect | named_sound_effect | 38690.0ms
| NamedSoundEffect | named_sound_effect | 38789.0ms
| NamedSoundEffect | named_sound_effect | 38792.0ms
| NamedSoundEffect | named_sound_effect | 38876.0ms
| NamedSoundEffect | named_sound_effect | 38879.0ms
| NamedSoundEffect | named_sound_effect | 38934.0ms
| NamedSoundEffect | named_sound_effect | 38936.0ms
| NamedSoundEffect | named_sound_effect | 38988.0ms
| NamedSoundEffect | named_sound_effect | 39003.0ms
| NamedSoundEffect | named_sound_effect | 39110.0ms
| NamedSoundEffect | named_sound_effect | 39259.0ms
| NamedSoundEffect | named_sound_effect | 39262.0ms
| NamedSoundEffect | named_sound_effect | 39265.0ms
| NamedSoundEffect | named_sound_effect | 39345.0ms
| NamedSoundEffect | named_sound_effect | 39381.0ms
| NamedSoundEffect | named_sound_effect | 39399.0ms
| NamedSoundEffect | named_sound_effect | 39403.0ms
| NamedSoundEffect | named_sound_effect | 39505.0ms
| NamedSoundEffect | named_sound_effect | 39603.0ms
| NamedSoundEffect | named_sound_effect | 39606.0ms
| NamedSoundEffect | named_sound_effect | 39698.0ms
| NamedSoundEffect | named_sound_effect | 39799.0ms
| NamedSoundEffect | named_sound_effect | 39871.0ms
| NamedSoundEffect | named_sound_effect | 39873.0ms
| NamedSoundEffect | named_sound_effect | 39875.0ms
| NamedSoundEffect | named_sound_effect | 39879.0ms
| NamedSoundEffect | named_sound_effect | 39959.0ms
| NamedSoundEffect | named_sound_effect | 40060.0ms
| NamedSoundEffect | named_sound_effect | 40104.0ms
| NamedSoundEffect | named_sound_effect | 40151.0ms
| NamedSoundEffect | named_sound_effect | 40213.0ms
| NamedSoundEffect | named_sound_effect | 40214.0ms
| NamedSoundEffect | named_sound_effect | 40310.0ms
| NamedSoundEffect | named_sound_effect | 40352.0ms
| NamedSoundEffect | named_sound_effect | 40357.0ms
| NamedSoundEffect | named_sound_effect | 40405.0ms
| NamedSoundEffect | named_sound_effect | 40583.0ms
| NamedSoundEffect | named_sound_effect | 40587.0ms
| NamedSoundEffect | named_sound_effect | 40650.0ms
| NamedSoundEffect | named_sound_effect | 40653.0ms
| NamedSoundEffect | named_sound_effect | 40707.0ms
| NamedSoundEffect | named_sound_effect | 40711.0ms
| NamedSoundEffect | named_sound_effect | 40782.0ms
| NamedSoundEffect | named_sound_effect | 40857.0ms
| NamedSoundEffect | named_sound_effect | 40963.0ms
| NamedSoundEffect | named_sound_effect | 41014.0ms
| NamedSoundEffect | named_sound_effect | 41060.0ms
| NamedSoundEffect | named_sound_effect | 41062.0ms
| NamedSoundEffect | named_sound_effect | 41064.0ms
| NamedSoundEffect | named_sound_effect | 41124.0ms
| NamedSoundEffect | named_sound_effect | 41266.0ms
| NamedSoundEffect | named_sound_effect | 41271.0ms
| NamedSoundEffect | named_sound_effect | 41376.0ms
| NamedSoundEffect | named_sound_effect | 41395.0ms
| NamedSoundEffect | named_sound_effect | 41446.0ms
| NamedSoundEffect | named_sound_effect | 41486.0ms
| NamedSoundEffect | named_sound_effect | 41503.0ms
| NamedSoundEffect | named_sound_effect | 41507.0ms
| NamedSoundEffect | named_sound_effect | 41510.0ms
| NamedSoundEffect | named_sound_effect | 41756.0ms
| NamedSoundEffect | named_sound_effect | 41800.0ms
| NamedSoundEffect | named_sound_effect | 41834.0ms
| NamedSoundEffect | named_sound_effect | 41890.0ms
| NamedSoundEffect | named_sound_effect | 41968.0ms
| NamedSoundEffect | named_sound_effect | 41971.0ms
| NamedSoundEffect | named_sound_effect | 41974.0ms
| NamedSoundEffect | named_sound_effect | 41977.0ms
| NamedSoundEffect | named_sound_effect | 42172.0ms
| EntityTeleport | entity_teleport | 42175.0ms
| NamedSoundEffect | named_sound_effect | 42262.0ms
| NamedSoundEffect | named_sound_effect | 42288.0ms
| EntityLook | entity_look | 42291.0ms
| NamedSoundEffect | named_sound_effect | 42391.0ms
| NamedSoundEffect | named_sound_effect | 42393.0ms
| NamedSoundEffect | named_sound_effect | 42396.0ms
| NamedSoundEffect | named_sound_effect | 42401.0ms
| PlayerInfo | player_info | 42693.0ms
| NamedSoundEffect | named_sound_effect | 42696.0ms
| Chat | chat | 42959.0ms
| PlayerInfo | player_info | 42962.0ms
| NamedEntitySpawn | named_entity_spawn | 42965.0ms
| EntityMetadata | entity_metadata | 42968.0ms
| EntityUpdateAttributes | entity_update_attributes | 42971.0ms
| EntityTeleport | entity_teleport | 42974.0ms
| EntityUpdateAttributes | entity_update_attributes | 42977.0ms
| NamedSoundEffect | named_sound_effect | 42979.0ms
| EntityTeleport | entity_teleport | 42982.0ms
| NamedSoundEffect | named_sound_effect | 42984.0ms
| NamedSoundEffect | named_sound_effect | 42988.0ms
| NamedSoundEffect | named_sound_effect | 42994.0ms
| NamedSoundEffect | named_sound_effect | 42996.0ms
| NamedSoundEffect | named_sound_effect | 42999.0ms
| NamedSoundEffect | named_sound_effect | 43001.0ms
| NamedSoundEffect | named_sound_effect | 43006.0ms
| NamedSoundEffect | named_sound_effect | 43009.0ms
| NamedSoundEffect | named_sound_effect | 43374.0ms
| NamedSoundEffect | named_sound_effect | 43376.0ms
| NamedSoundEffect | named_sound_effect | 43379.0ms
| NamedSoundEffect | named_sound_effect | 43384.0ms
| NamedSoundEffect | named_sound_effect | 43387.0ms
| NamedSoundEffect | named_sound_effect | 43389.0ms
| NamedSoundEffect | named_sound_effect | 43392.0ms
| NamedSoundEffect | named_sound_effect | 43395.0ms
| NamedSoundEffect | named_sound_effect | 43397.0ms
| NamedSoundEffect | named_sound_effect | 43402.0ms
| NamedSoundEffect | named_sound_effect | 43405.0ms
| NamedSoundEffect | named_sound_effect | 43864.0ms
| NamedSoundEffect | named_sound_effect | 43867.0ms
| NamedSoundEffect | named_sound_effect | 43870.0ms
| NamedSoundEffect | named_sound_effect | 43874.0ms
| NamedSoundEffect | named_sound_effect | 43878.0ms
| NamedSoundEffect | named_sound_effect | 43881.0ms
| NamedSoundEffect | named_sound_effect | 43884.0ms
| NamedSoundEffect | named_sound_effect | 43887.0ms
| NamedSoundEffect | named_sound_effect | 43890.0ms
| NamedSoundEffect | named_sound_effect | 43895.0ms
| NamedSoundEffect | named_sound_effect | 43899.0ms
| NamedSoundEffect | named_sound_effect | 43902.0ms
| NamedSoundEffect | named_sound_effect | 43906.0ms
| NamedSoundEffect | named_sound_effect | 44148.0ms
| NamedSoundEffect | named_sound_effect | 44151.0ms
| NamedSoundEffect | named_sound_effect | 44153.0ms
| NamedSoundEffect | named_sound_effect | 44156.0ms
| NamedSoundEffect | named_sound_effect | 44159.0ms
| NamedSoundEffect | named_sound_effect | 44270.0ms
| NamedSoundEffect | named_sound_effect | 44274.0ms
| NamedSoundEffect | named_sound_effect | 44389.0ms
| NamedSoundEffect | named_sound_effect | 44394.0ms
| NamedSoundEffect | named_sound_effect | 44398.0ms
| NamedSoundEffect | named_sound_effect | 44484.0ms
| NamedSoundEffect | named_sound_effect | 44489.0ms
| NamedSoundEffect | named_sound_effect | 44493.0ms
| NamedSoundEffect | named_sound_effect | 44496.0ms
| NamedSoundEffect | named_sound_effect | 44499.0ms
| NamedSoundEffect | named_sound_effect | 44606.0ms
| NamedSoundEffect | named_sound_effect | 44745.0ms
| NamedSoundEffect | named_sound_effect | 44747.0ms
| NamedSoundEffect | named_sound_effect | 44763.0ms
| NamedSoundEffect | named_sound_effect | 44765.0ms
| NamedSoundEffect | named_sound_effect | 44839.0ms
| NamedSoundEffect | named_sound_effect | 44842.0ms
| NamedSoundEffect | named_sound_effect | 44846.0ms
| NamedSoundEffect | named_sound_effect | 44896.0ms
| NamedSoundEffect | named_sound_effect | 45087.0ms
| NamedSoundEffect | named_sound_effect | 45091.0ms
| NamedSoundEffect | named_sound_effect | 45093.0ms
| NamedSoundEffect | named_sound_effect | 45205.0ms
| NamedSoundEffect | named_sound_effect | 45209.0ms
| NamedSoundEffect | named_sound_effect | 45212.0ms
| NamedSoundEffect | named_sound_effect | 45214.0ms
| NamedSoundEffect | named_sound_effect | 45329.0ms
| NamedSoundEffect | named_sound_effect | 45331.0ms
| NamedSoundEffect | named_sound_effect | 45334.0ms
| NamedSoundEffect | named_sound_effect | 45342.0ms
| NamedSoundEffect | named_sound_effect | 45459.0ms
| NamedSoundEffect | named_sound_effect | 45461.0ms
| NamedSoundEffect | named_sound_effect | 45463.0ms
| NamedSoundEffect | named_sound_effect | 45468.0ms
| NamedSoundEffect | named_sound_effect | 45629.0ms
| NamedSoundEffect | named_sound_effect | 45648.0ms
| NamedSoundEffect | named_sound_effect | 45716.0ms
| NamedSoundEffect | named_sound_effect | 45718.0ms
| NamedSoundEffect | named_sound_effect | 45720.0ms
| NamedSoundEffect | named_sound_effect | 45786.0ms
| NamedSoundEffect | named_sound_effect | 45810.0ms
| KeepAlive | keep_alive | 46017.0ms
| NamedSoundEffect | named_sound_effect | 46020.0ms
| NamedSoundEffect | named_sound_effect | 46023.0ms
| NamedSoundEffect | named_sound_effect | 46026.0ms
| NamedSoundEffect | named_sound_effect | 46028.0ms
| NamedSoundEffect | named_sound_effect | 46044.0ms
| NamedSoundEffect | named_sound_effect | 46083.0ms
| NamedSoundEffect | named_sound_effect | 46108.0ms
| NamedSoundEffect | named_sound_effect | 46150.0ms
| NamedSoundEffect | named_sound_effect | 46203.0ms
| NamedSoundEffect | named_sound_effect | 46260.0ms
| NamedSoundEffect | named_sound_effect | 46299.0ms
| NamedSoundEffect | named_sound_effect | 46381.0ms
| NamedSoundEffect | named_sound_effect | 46406.0ms
| NamedSoundEffect | named_sound_effect | 46483.0ms
| NamedSoundEffect | named_sound_effect | 46485.0ms
| NamedSoundEffect | named_sound_effect | 46531.0ms
| NamedSoundEffect | named_sound_effect | 46534.0ms
| NamedSoundEffect | named_sound_effect | 46664.0ms
| NamedSoundEffect | named_sound_effect | 46666.0ms
| NamedSoundEffect | named_sound_effect | 46668.0ms
| NamedSoundEffect | named_sound_effect | 46713.0ms
| NamedSoundEffect | named_sound_effect | 46845.0ms
| NamedSoundEffect | named_sound_effect | 46897.0ms
| NamedSoundEffect | named_sound_effect | 46899.0ms
| NamedSoundEffect | named_sound_effect | 46904.0ms
| NamedSoundEffect | named_sound_effect | 46958.0ms
| NamedSoundEffect | named_sound_effect | 46961.0ms
| NamedSoundEffect | named_sound_effect | 46963.0ms
| NamedSoundEffect | named_sound_effect | 47027.0ms
| NamedSoundEffect | named_sound_effect | 47106.0ms
| EntityTeleport | entity_teleport | 47157.0ms
| NamedSoundEffect | named_sound_effect | 47328.0ms
| NamedSoundEffect | named_sound_effect | 47333.0ms
| NamedSoundEffect | named_sound_effect | 47336.0ms
| NamedSoundEffect | named_sound_effect | 47339.0ms
| NamedSoundEffect | named_sound_effect | 47343.0ms
| NamedSoundEffect | named_sound_effect | 47503.0ms
| NamedSoundEffect | named_sound_effect | 47505.0ms
| NamedSoundEffect | named_sound_effect | 47510.0ms
| NamedSoundEffect | named_sound_effect | 47599.0ms
| NamedSoundEffect | named_sound_effect | 47601.0ms
| NamedSoundEffect | named_sound_effect | 47606.0ms
| NamedSoundEffect | named_sound_effect | 47608.0ms
| PlayerInfo | player_info | 47903.0ms
| NamedSoundEffect | named_sound_effect | 47906.0ms
| Chat | chat | 48055.0ms
| PlayerInfo | player_info | 48058.0ms
| NamedEntitySpawn | named_entity_spawn | 48060.0ms
| EntityMetadata | entity_metadata | 48063.0ms
| EntityUpdateAttributes | entity_update_attributes | 48068.0ms
| EntityTeleport | entity_teleport | 48070.0ms
| EntityUpdateAttributes | entity_update_attributes | 48072.0ms
| NamedSoundEffect | named_sound_effect | 48074.0ms
| EntityTeleport | entity_teleport | 48077.0ms
| NamedSoundEffect | named_sound_effect | 48080.0ms
| NamedSoundEffect | named_sound_effect | 48084.0ms
| NamedSoundEffect | named_sound_effect | 48086.0ms
| NamedSoundEffect | named_sound_effect | 48089.0ms
| NamedSoundEffect | named_sound_effect | 48092.0ms
| NamedSoundEffect | named_sound_effect | 48096.0ms
| NamedSoundEffect | named_sound_effect | 48734.0ms
| NamedSoundEffect | named_sound_effect | 48739.0ms
| NamedSoundEffect | named_sound_effect | 48742.0ms
| NamedSoundEffect | named_sound_effect | 48747.0ms
| NamedSoundEffect | named_sound_effect | 48750.0ms
| NamedSoundEffect | named_sound_effect | 48753.0ms
| NamedSoundEffect | named_sound_effect | 48756.0ms
| NamedSoundEffect | named_sound_effect | 48761.0ms
| NamedSoundEffect | named_sound_effect | 48764.0ms
| NamedSoundEffect | named_sound_effect | 48769.0ms
| NamedSoundEffect | named_sound_effect | 48772.0ms
| NamedSoundEffect | named_sound_effect | 48774.0ms
| NamedSoundEffect | named_sound_effect | 48777.0ms
| NamedSoundEffect | named_sound_effect | 48783.0ms
| NamedSoundEffect | named_sound_effect | 48786.0ms
| NamedSoundEffect | named_sound_effect | 48788.0ms
| NamedSoundEffect | named_sound_effect | 48791.0ms
| NamedSoundEffect | named_sound_effect | 48795.0ms
| NamedSoundEffect | named_sound_effect | 49551.0ms
| NamedSoundEffect | named_sound_effect | 49554.0ms
| NamedSoundEffect | named_sound_effect | 49557.0ms
| NamedSoundEffect | named_sound_effect | 49561.0ms
| NamedSoundEffect | named_sound_effect | 49565.0ms
| EntityTeleport | entity_teleport | 49569.0ms
| NamedSoundEffect | named_sound_effect | 49573.0ms
| NamedSoundEffect | named_sound_effect | 49577.0ms
| NamedSoundEffect | named_sound_effect | 49580.0ms
| NamedSoundEffect | named_sound_effect | 49583.0ms
| NamedSoundEffect | named_sound_effect | 49586.0ms
| NamedSoundEffect | named_sound_effect | 49591.0ms
| NamedSoundEffect | named_sound_effect | 49595.0ms
| NamedSoundEffect | named_sound_effect | 49598.0ms
| NamedSoundEffect | named_sound_effect | 49601.0ms
| NamedSoundEffect | named_sound_effect | 49604.0ms
| NamedSoundEffect | named_sound_effect | 49606.0ms
| NamedSoundEffect | named_sound_effect | 49611.0ms
| NamedSoundEffect | named_sound_effect | 49615.0ms
| NamedSoundEffect | named_sound_effect | 49618.0ms
| NamedSoundEffect | named_sound_effect | 49620.0ms
| NamedSoundEffect | named_sound_effect | 50214.0ms
| NamedSoundEffect | named_sound_effect | 50219.0ms
| NamedSoundEffect | named_sound_effect | 50222.0ms
| NamedSoundEffect | named_sound_effect | 50226.0ms
| NamedSoundEffect | named_sound_effect | 50229.0ms
| NamedSoundEffect | named_sound_effect | 50232.0ms
| NamedSoundEffect | named_sound_effect | 50236.0ms
| NamedSoundEffect | named_sound_effect | 50241.0ms
| EntityLook | entity_look | 50246.0ms
| NamedSoundEffect | named_sound_effect | 50250.0ms
| NamedSoundEffect | named_sound_effect | 50253.0ms
| NamedSoundEffect | named_sound_effect | 50257.0ms
| NamedSoundEffect | named_sound_effect | 50261.0ms
| NamedSoundEffect | named_sound_effect | 50264.0ms
| NamedSoundEffect | named_sound_effect | 50267.0ms
| NamedSoundEffect | named_sound_effect | 50270.0ms
| NamedSoundEffect | named_sound_effect | 50273.0ms
| NamedSoundEffect | named_sound_effect | 50277.0ms
| NamedSoundEffect | named_sound_effect | 50281.0ms
| NamedSoundEffect | named_sound_effect | 50730.0ms
| NamedSoundEffect | named_sound_effect | 50734.0ms
| NamedSoundEffect | named_sound_effect | 50737.0ms
| NamedSoundEffect | named_sound_effect | 50741.0ms
| NamedSoundEffect | named_sound_effect | 50745.0ms
| NamedSoundEffect | named_sound_effect | 50748.0ms
| NamedSoundEffect | named_sound_effect | 50750.0ms
| NamedSoundEffect | named_sound_effect | 50775.0ms
| NamedSoundEffect | named_sound_effect | 50778.0ms
| NamedSoundEffect | named_sound_effect | 50783.0ms
| NamedSoundEffect | named_sound_effect | 50786.0ms
| NamedSoundEffect | named_sound_effect | 50788.0ms
| NamedSoundEffect | named_sound_effect | 51139.0ms
| NamedSoundEffect | named_sound_effect | 51143.0ms
| NamedSoundEffect | named_sound_effect | 51147.0ms
| NamedSoundEffect | named_sound_effect | 51149.0ms
| NamedSoundEffect | named_sound_effect | 51154.0ms
| NamedSoundEffect | named_sound_effect | 51156.0ms
| NamedSoundEffect | named_sound_effect | 51159.0ms
| NamedSoundEffect | named_sound_effect | 51162.0ms
| NamedSoundEffect | named_sound_effect | 51165.0ms
| NamedSoundEffect | named_sound_effect | 51167.0ms
| NamedSoundEffect | named_sound_effect | 51172.0ms
| NamedSoundEffect | named_sound_effect | 51420.0ms
| NamedSoundEffect | named_sound_effect | 51422.0ms
| NamedSoundEffect | named_sound_effect | 51424.0ms
| NamedSoundEffect | named_sound_effect | 51426.0ms
| NamedSoundEffect | named_sound_effect | 51431.0ms
| NamedSoundEffect | named_sound_effect | 51433.0ms
| NamedSoundEffect | named_sound_effect | 51435.0ms
| NamedSoundEffect | named_sound_effect | 51568.0ms
| NamedSoundEffect | named_sound_effect | 51570.0ms
| NamedSoundEffect | named_sound_effect | 51572.0ms
| NamedSoundEffect | named_sound_effect | 51574.0ms
| NamedSoundEffect | named_sound_effect | 51639.0ms
| EntityTeleport | entity_teleport | 51677.0ms
| NamedSoundEffect | named_sound_effect | 51680.0ms
| NamedSoundEffect | named_sound_effect | 51759.0ms
| NamedSoundEffect | named_sound_effect | 51764.0ms
| NamedSoundEffect | named_sound_effect | 51821.0ms
| NamedSoundEffect | named_sound_effect | 51826.0ms
| NamedSoundEffect | named_sound_effect | 51878.0ms
| NamedSoundEffect | named_sound_effect | 51906.0ms
| NamedSoundEffect | named_sound_effect | 51959.0ms
| NamedSoundEffect | named_sound_effect | 51963.0ms
| NamedSoundEffect | named_sound_effect | 52052.0ms
| NamedSoundEffect | named_sound_effect | 52060.0ms
| NamedSoundEffect | named_sound_effect | 52096.0ms
| NamedSoundEffect | named_sound_effect | 52151.0ms
| NamedSoundEffect | named_sound_effect | 52197.0ms
| NamedSoundEffect | named_sound_effect | 52199.0ms
| PlayerInfo | player_info | 52224.0ms
| NamedSoundEffect | named_sound_effect | 52296.0ms
| NamedSoundEffect | named_sound_effect | 52298.0ms
| EntityTeleport | entity_teleport | 52300.0ms
| NamedSoundEffect | named_sound_effect | 52503.0ms
| NamedSoundEffect | named_sound_effect | 52506.0ms
| EntityLook | entity_look | 52508.0ms
| NamedSoundEffect | named_sound_effect | 52510.0ms
| NamedSoundEffect | named_sound_effect | 52515.0ms
| NamedSoundEffect | named_sound_effect | 52693.0ms
| NamedSoundEffect | named_sound_effect | 52696.0ms
| NamedSoundEffect | named_sound_effect | 52698.0ms
| NamedSoundEffect | named_sound_effect | 52701.0ms
| NamedSoundEffect | named_sound_effect | 52841.0ms
| NamedSoundEffect | named_sound_effect | 52845.0ms
| NamedSoundEffect | named_sound_effect | 52848.0ms
| NamedSoundEffect | named_sound_effect | 52850.0ms
| NamedSoundEffect | named_sound_effect | 52853.0ms
| PlayerInfo | player_info | 53148.0ms
| Chat | chat | 53572.0ms
| PlayerInfo | player_info | 53575.0ms
| NamedEntitySpawn | named_entity_spawn | 53577.0ms
| EntityMetadata | entity_metadata | 53581.0ms
| EntityUpdateAttributes | entity_update_attributes | 53584.0ms
| EntityTeleport | entity_teleport | 53586.0ms
| EntityUpdateAttributes | entity_update_attributes | 53589.0ms
| NamedSoundEffect | named_sound_effect | 53593.0ms
| NamedSoundEffect | named_sound_effect | 53597.0ms
| NamedSoundEffect | named_sound_effect | 53601.0ms
| NamedSoundEffect | named_sound_effect | 53603.0ms
| EntityTeleport | entity_teleport | 53605.0ms
| NamedSoundEffect | named_sound_effect | 53608.0ms
| NamedSoundEffect | named_sound_effect | 53611.0ms
| NamedSoundEffect | named_sound_effect | 53615.0ms
| NamedSoundEffect | named_sound_effect | 53693.0ms
| NamedSoundEffect | named_sound_effect | 53708.0ms
| NamedSoundEffect | named_sound_effect | 53711.0ms
| NamedSoundEffect | named_sound_effect | 53714.0ms
| NamedSoundEffect | named_sound_effect | 53718.0ms
| NamedSoundEffect | named_sound_effect | 53721.0ms
| NamedSoundEffect | named_sound_effect | 53724.0ms
| NamedSoundEffect | named_sound_effect | 54511.0ms
| NamedSoundEffect | named_sound_effect | 54514.0ms
| NamedSoundEffect | named_sound_effect | 54517.0ms
| NamedSoundEffect | named_sound_effect | 54520.0ms
| NamedSoundEffect | named_sound_effect | 54522.0ms
| NamedSoundEffect | named_sound_effect | 54527.0ms
| NamedSoundEffect | named_sound_effect | 54529.0ms
| NamedSoundEffect | named_sound_effect | 54532.0ms
| NamedSoundEffect | named_sound_effect | 54534.0ms
| NamedSoundEffect | named_sound_effect | 54537.0ms
| NamedSoundEffect | named_sound_effect | 54539.0ms
| NamedSoundEffect | named_sound_effect | 54544.0ms
| NamedSoundEffect | named_sound_effect | 54546.0ms
| NamedSoundEffect | named_sound_effect | 54550.0ms
| NamedSoundEffect | named_sound_effect | 54554.0ms
| NamedSoundEffect | named_sound_effect | 54558.0ms
| NamedSoundEffect | named_sound_effect | 54561.0ms
| NamedSoundEffect | named_sound_effect | 54565.0ms
| NamedSoundEffect | named_sound_effect | 54568.0ms
| NamedSoundEffect | named_sound_effect | 54571.0ms
| NamedSoundEffect | named_sound_effect | 54573.0ms
| NamedSoundEffect | named_sound_effect | 54576.0ms
| NamedSoundEffect | named_sound_effect | 54578.0ms
| NamedSoundEffect | named_sound_effect | 54583.0ms
| NamedSoundEffect | named_sound_effect | 54586.0ms
| NamedSoundEffect | named_sound_effect | 54588.0ms
| NamedSoundEffect | named_sound_effect | 54591.0ms
| NamedSoundEffect | named_sound_effect | 54594.0ms
| NamedSoundEffect | named_sound_effect | 55255.0ms
| NamedSoundEffect | named_sound_effect | 55260.0ms
| NamedSoundEffect | named_sound_effect | 55263.0ms
| NamedSoundEffect | named_sound_effect | 55266.0ms
| NamedSoundEffect | named_sound_effect | 55271.0ms
| NamedSoundEffect | named_sound_effect | 55273.0ms
| NamedSoundEffect | named_sound_effect | 55276.0ms
| NamedSoundEffect | named_sound_effect | 55280.0ms
| NamedSoundEffect | named_sound_effect | 55283.0ms
| NamedSoundEffect | named_sound_effect | 55286.0ms
| NamedSoundEffect | named_sound_effect | 55288.0ms
| NamedSoundEffect | named_sound_effect | 55292.0ms
| NamedSoundEffect | named_sound_effect | 55294.0ms
| NamedSoundEffect | named_sound_effect | 55299.0ms
| NamedSoundEffect | named_sound_effect | 55302.0ms
| NamedSoundEffect | named_sound_effect | 55305.0ms
| NamedSoundEffect | named_sound_effect | 55308.0ms
| NamedSoundEffect | named_sound_effect | 55311.0ms
| NamedSoundEffect | named_sound_effect | 55314.0ms
| NamedSoundEffect | named_sound_effect | 55318.0ms
| NamedSoundEffect | named_sound_effect | 55691.0ms
| NamedSoundEffect | named_sound_effect | 55694.0ms
| NamedSoundEffect | named_sound_effect | 55696.0ms
| NamedSoundEffect | named_sound_effect | 55699.0ms
| NamedSoundEffect | named_sound_effect | 55702.0ms
| NamedSoundEffect | named_sound_effect | 55704.0ms
| NamedSoundEffect | named_sound_effect | 55709.0ms
| NamedSoundEffect | named_sound_effect | 55712.0ms
| NamedSoundEffect | named_sound_effect | 55715.0ms
| NamedSoundEffect | named_sound_effect | 55945.0ms
| NamedSoundEffect | named_sound_effect | 55948.0ms
| NamedSoundEffect | named_sound_effect | 55951.0ms
| NamedSoundEffect | named_sound_effect | 55954.0ms
| NamedSoundEffect | named_sound_effect | 55956.0ms
| NamedSoundEffect | named_sound_effect | 55959.0ms
| NamedSoundEffect | named_sound_effect | 56101.0ms
| NamedSoundEffect | named_sound_effect | 56104.0ms
| NamedSoundEffect | named_sound_effect | 56107.0ms
| NamedSoundEffect | named_sound_effect | 56109.0ms
| NamedSoundEffect | named_sound_effect | 56112.0ms
| NamedSoundEffect | named_sound_effect | 56216.0ms
| NamedSoundEffect | named_sound_effect | 56219.0ms
| NamedSoundEffect | named_sound_effect | 56223.0ms
| NamedSoundEffect | named_sound_effect | 56226.0ms
| NamedSoundEffect | named_sound_effect | 56309.0ms
| NamedSoundEffect | named_sound_effect | 56374.0ms
| NamedSoundEffect | named_sound_effect | 56445.0ms
| NamedSoundEffect | named_sound_effect | 56682.0ms
| NamedSoundEffect | named_sound_effect | 56687.0ms
| NamedSoundEffect | named_sound_effect | 56689.0ms
| NamedSoundEffect | named_sound_effect | 56692.0ms
| NamedSoundEffect | named_sound_effect | 56695.0ms
| NamedSoundEffect | named_sound_effect | 56697.0ms
| NamedSoundEffect | named_sound_effect | 56701.0ms
| NamedSoundEffect | named_sound_effect | 56733.0ms
| NamedSoundEffect | named_sound_effect | 56874.0ms
| NamedSoundEffect | named_sound_effect | 56879.0ms
| NamedSoundEffect | named_sound_effect | 56881.0ms
| NamedSoundEffect | named_sound_effect | 56884.0ms
| EntityTeleport | entity_teleport | 56956.0ms
| NamedSoundEffect | named_sound_effect | 56958.0ms
| NamedSoundEffect | named_sound_effect | 56979.0ms
| NamedSoundEffect | named_sound_effect | 56981.0ms
| NamedSoundEffect | named_sound_effect | 57044.0ms
| NamedSoundEffect | named_sound_effect | 57114.0ms
| NamedSoundEffect | named_sound_effect | 57118.0ms
| NamedSoundEffect | named_sound_effect | 57121.0ms
| NamedSoundEffect | named_sound_effect | 57124.0ms
| NamedSoundEffect | named_sound_effect | 57720.0ms
| NamedSoundEffect | named_sound_effect | 57724.0ms
| NamedSoundEffect | named_sound_effect | 57727.0ms
| EntityTeleport | entity_teleport | 57730.0ms
| NamedSoundEffect | named_sound_effect | 57732.0ms
| NamedSoundEffect | named_sound_effect | 57734.0ms
| NamedSoundEffect | named_sound_effect | 57737.0ms
| NamedSoundEffect | named_sound_effect | 57742.0ms
| NamedSoundEffect | named_sound_effect | 57744.0ms
| NamedSoundEffect | named_sound_effect | 57747.0ms
| NamedSoundEffect | named_sound_effect | 57750.0ms
| NamedSoundEffect | named_sound_effect | 57753.0ms
| NamedSoundEffect | named_sound_effect | 57755.0ms
| NamedSoundEffect | named_sound_effect | 57760.0ms
| NamedSoundEffect | named_sound_effect | 57957.0ms
| NamedSoundEffect | named_sound_effect | 57959.0ms
| EntityTeleport | entity_teleport | 57962.0ms
| NamedSoundEffect | named_sound_effect | 57964.0ms
| NamedSoundEffect | named_sound_effect | 57968.0ms
| NamedSoundEffect | named_sound_effect | 57971.0ms
| NamedSoundEffect | named_sound_effect | 57973.0ms
| NamedSoundEffect | named_sound_effect | 57976.0ms
| NamedSoundEffect | named_sound_effect | 58950.0ms
| NamedSoundEffect | named_sound_effect | 58953.0ms
| NamedSoundEffect | named_sound_effect | 58955.0ms
| NamedSoundEffect | named_sound_effect | 58957.0ms
| NamedSoundEffect | named_sound_effect | 58960.0ms
| NamedSoundEffect | named_sound_effect | 58962.0ms
| NamedSoundEffect | named_sound_effect | 58966.0ms
| NamedSoundEffect | named_sound_effect | 58969.0ms
| NamedSoundEffect | named_sound_effect | 58972.0ms
| NamedSoundEffect | named_sound_effect | 58974.0ms
| NamedSoundEffect | named_sound_effect | 58976.0ms
| NamedSoundEffect | named_sound_effect | 58979.0ms
| NamedSoundEffect | named_sound_effect | 58983.0ms
| NamedSoundEffect | named_sound_effect | 58986.0ms
| NamedSoundEffect | named_sound_effect | 58989.0ms
| NamedSoundEffect | named_sound_effect | 58991.0ms
| NamedSoundEffect | named_sound_effect | 58993.0ms
| NamedSoundEffect | named_sound_effect | 58995.0ms
| NamedSoundEffect | named_sound_effect | 59000.0ms
| NamedSoundEffect | named_sound_effect | 59003.0ms
| NamedSoundEffect | named_sound_effect | 59005.0ms
| NamedSoundEffect | named_sound_effect | 59008.0ms
| NamedSoundEffect | named_sound_effect | 59010.0ms
| NamedSoundEffect | named_sound_effect | 59012.0ms
| NamedSoundEffect | named_sound_effect | 59017.0ms
| EntityLook | entity_look | 59908.0ms
| NamedSoundEffect | named_sound_effect | 59911.0ms
| NamedSoundEffect | named_sound_effect | 59914.0ms
| NamedSoundEffect | named_sound_effect | 59916.0ms
| NamedSoundEffect | named_sound_effect | 59921.0ms
| NamedSoundEffect | named_sound_effect | 59924.0ms
| NamedSoundEffect | named_sound_effect | 59928.0ms
| NamedSoundEffect | named_sound_effect | 59930.0ms
| NamedSoundEffect | named_sound_effect | 59933.0ms
| NamedSoundEffect | named_sound_effect | 59936.0ms
| NamedSoundEffect | named_sound_effect | 59941.0ms
| NamedSoundEffect | named_sound_effect | 59944.0ms
| NamedSoundEffect | named_sound_effect | 59947.0ms
| NamedSoundEffect | named_sound_effect | 59950.0ms
| NamedSoundEffect | named_sound_effect | 59952.0ms
| NamedSoundEffect | named_sound_effect | 59956.0ms
| NamedSoundEffect | named_sound_effect | 59960.0ms
| NamedSoundEffect | named_sound_effect | 59963.0ms
| NamedSoundEffect | named_sound_effect | 59967.0ms
| NamedSoundEffect | named_sound_effect | 59969.0ms
| NamedSoundEffect | named_sound_effect | 59973.0ms
| NamedSoundEffect | named_sound_effect | 59975.0ms
| NamedSoundEffect | named_sound_effect | 59980.0ms
| NamedSoundEffect | named_sound_effect | 59982.0ms
| NamedSoundEffect | named_sound_effect | 60724.0ms
| NamedSoundEffect | named_sound_effect | 60727.0ms
| NamedSoundEffect | named_sound_effect | 60730.0ms
| NamedSoundEffect | named_sound_effect | 60733.0ms
| NamedSoundEffect | named_sound_effect | 60736.0ms
| NamedSoundEffect | named_sound_effect | 60739.0ms
| NamedSoundEffect | named_sound_effect | 60743.0ms
| NamedSoundEffect | named_sound_effect | 60746.0ms
| NamedSoundEffect | named_sound_effect | 60749.0ms
| NamedSoundEffect | named_sound_effect | 60761.0ms
| NamedSoundEffect | named_sound_effect | 60766.0ms
| NamedSoundEffect | named_sound_effect | 60769.0ms
| NamedSoundEffect | named_sound_effect | 60772.0ms
| NamedSoundEffect | named_sound_effect | 60777.0ms
| NamedSoundEffect | named_sound_effect | 60780.0ms
| NamedSoundEffect | named_sound_effect | 60783.0ms
| NamedSoundEffect | named_sound_effect | 60785.0ms
| NamedSoundEffect | named_sound_effect | 60788.0ms
| NamedSoundEffect | named_sound_effect | 60791.0ms
| NamedSoundEffect | named_sound_effect | 61281.0ms
| NamedSoundEffect | named_sound_effect | 61283.0ms
| NamedSoundEffect | named_sound_effect | 61287.0ms
| NamedSoundEffect | named_sound_effect | 61289.0ms
| NamedSoundEffect | named_sound_effect | 61292.0ms
| KeepAlive | keep_alive | 61295.0ms
| NamedSoundEffect | named_sound_effect | 61297.0ms
| NamedSoundEffect | named_sound_effect | 61300.0ms
| NamedSoundEffect | named_sound_effect | 61305.0ms
| NamedSoundEffect | named_sound_effect | 61307.0ms
| NamedSoundEffect | named_sound_effect | 61309.0ms
| NamedSoundEffect | named_sound_effect | 61312.0ms
| NamedSoundEffect | named_sound_effect | 61314.0ms
| NamedSoundEffect | named_sound_effect | 61316.0ms
| NamedSoundEffect | named_sound_effect | 61322.0ms
| NamedSoundEffect | named_sound_effect | 61325.0ms
| NamedSoundEffect | named_sound_effect | 61327.0ms
| Difficulty | difficulty | 61329.0ms
| SpawnEntityLiving | spawn_entity_living | 61333.0ms
| EntityMetadata | entity_metadata | 61335.0ms
| EntityUpdateAttributes | entity_update_attributes | 61337.0ms
| EntityUpdateAttributes | entity_update_attributes | 61864.0ms
| NamedSoundEffect | named_sound_effect | 61866.0ms
| NamedSoundEffect | named_sound_effect | 61869.0ms
| MultiBlockChange | multi_block_change | 61873.0ms
| EntityTeleport | entity_teleport | 61875.0ms
| NamedSoundEffect | named_sound_effect | 61877.0ms
| NamedSoundEffect | named_sound_effect | 61880.0ms
| NamedSoundEffect | named_sound_effect | 61884.0ms
| NamedSoundEffect | named_sound_effect | 61886.0ms
| NamedSoundEffect | named_sound_effect | 61889.0ms
| NamedSoundEffect | named_sound_effect | 61891.0ms
| NamedSoundEffect | named_sound_effect | 61893.0ms
| NamedSoundEffect | named_sound_effect | 61896.0ms
| WorldParticles | world_particles | 61900.0ms
| WorldParticles | world_particles | 61902.0ms
| WorldParticles | world_particles | 61905.0ms
| WorldParticles | world_particles | 61907.0ms
| WorldParticles | world_particles | 61909.0ms
| WorldParticles | world_particles | 61911.0ms
| WorldParticles | world_particles | 61914.0ms
| WorldParticles | world_particles | 61918.0ms
| WorldParticles | world_particles | 61921.0ms
| WorldParticles | world_particles | 61924.0ms
| WorldParticles | world_particles | 61926.0ms
| WorldParticles | world_particles | 61928.0ms
| NamedSoundEffect | named_sound_effect | 62780.0ms
| NamedSoundEffect | named_sound_effect | 62783.0ms
| EntityLook | entity_look | 62786.0ms
| NamedSoundEffect | named_sound_effect | 62789.0ms
| NamedSoundEffect | named_sound_effect | 62792.0ms
| NamedSoundEffect | named_sound_effect | 62794.0ms
| NamedSoundEffect | named_sound_effect | 62798.0ms
| NamedSoundEffect | named_sound_effect | 62801.0ms
| NamedSoundEffect | named_sound_effect | 62804.0ms
| NamedSoundEffect | named_sound_effect | 62806.0ms
| NamedSoundEffect | named_sound_effect | 62808.0ms
| NamedSoundEffect | named_sound_effect | 62811.0ms
| EntityTeleport | entity_teleport | 62813.0ms
| NamedSoundEffect | named_sound_effect | 62816.0ms
| NamedSoundEffect | named_sound_effect | 62819.0ms
| NamedSoundEffect | named_sound_effect | 62822.0ms
| NamedSoundEffect | named_sound_effect | 62824.0ms
| NamedSoundEffect | named_sound_effect | 62827.0ms
| NamedSoundEffect | named_sound_effect | 62832.0ms
| NamedSoundEffect | named_sound_effect | 62834.0ms
| NamedSoundEffect | named_sound_effect | 62836.0ms
| NamedSoundEffect | named_sound_effect | 62839.0ms
| NamedSoundEffect | named_sound_effect | 62841.0ms
| NamedSoundEffect | named_sound_effect | 62844.0ms
| EntityTeleport | entity_teleport | 62847.0ms
| NamedSoundEffect | named_sound_effect | 62849.0ms
| NamedSoundEffect | named_sound_effect | 62852.0ms
| NamedSoundEffect | named_sound_effect | 62855.0ms
| NamedSoundEffect | named_sound_effect | 62857.0ms
| NamedSoundEffect | named_sound_effect | 62860.0ms
| NamedSoundEffect | named_sound_effect | 62865.0ms
| NamedSoundEffect | named_sound_effect | 62869.0ms
| ActionBar | action_bar | 62871.0ms
| NamedSoundEffect | named_sound_effect | 63901.0ms
| NamedSoundEffect | named_sound_effect | 63908.0ms
| NamedSoundEffect | named_sound_effect | 63910.0ms
| NamedSoundEffect | named_sound_effect | 63913.0ms
| NamedSoundEffect | named_sound_effect | 63915.0ms
| NamedSoundEffect | named_sound_effect | 63918.0ms
| SetTitleText | set_title_text | 63920.0ms
| NamedSoundEffect | named_sound_effect | 63922.0ms
| NamedSoundEffect | named_sound_effect | 63927.0ms
| GameStateChange | game_state_change | 63929.0ms
| NamedSoundEffect | named_sound_effect | 63932.0ms
| GameStateChange | game_state_change | 63934.0ms
| NamedSoundEffect | named_sound_effect | 63936.0ms
| GameStateChange | game_state_change | 63938.0ms
| NamedSoundEffect | named_sound_effect | 63941.0ms
| NamedSoundEffect | named_sound_effect | 63946.0ms
| NamedSoundEffect | named_sound_effect | 63948.0ms
| Abilities | abilities | 63950.0ms
| PlayerInfo | player_info | 63953.0ms
| GameStateChange | game_state_change | 63955.0ms
| Abilities | abilities | 63957.0ms
| Chat | chat | 63958.0ms
| PlayerInfo | player_info | 63961.0ms
| PlayerInfo | player_info | 63964.0ms
| PlayerInfo | player_info | 63990.0ms
| PlayerInfo | player_info | 63993.0ms
| PlayerInfo | player_info | 63995.0ms
| PlayerInfo | player_info | 63998.0ms
| PlayerInfo | player_info | 64032.0ms
| PlayerInfo | player_info | 64034.0ms
| PlayerInfo | player_info | 64036.0ms
| PlayerInfo | player_info | 64038.0ms
| GameStateChange | game_state_change | 64041.0ms
| Experience | experience | 64043.0ms
| GameStateChange | game_state_change | 64045.0ms
| NamedSoundEffect | named_sound_effect | 64047.0ms
| NamedSoundEffect | named_sound_effect | 64051.0ms
| NamedSoundEffect | named_sound_effect | 64053.0ms
| GameStateChange | game_state_change | 64055.0ms
| NamedSoundEffect | named_sound_effect | 64057.0ms
| GameStateChange | game_state_change | 64059.0ms
| NamedSoundEffect | named_sound_effect | 64062.0ms
| GameStateChange | game_state_change | 64064.0ms
| GameStateChange | game_state_change | 64067.0ms
| NamedSoundEffect | named_sound_effect | 64070.0ms
| GameStateChange | game_state_change | 64072.0ms
| NamedSoundEffect | named_sound_effect | 64074.0ms
| GameStateChange | game_state_change | 64075.0ms
| NamedSoundEffect | named_sound_effect | 64079.0ms
| NamedSoundEffect | named_sound_effect | 64082.0ms
| NamedSoundEffect | named_sound_effect | 64084.0ms
| GameStateChange | game_state_change | 64086.0ms
| NamedSoundEffect | named_sound_effect | 64088.0ms
| NamedSoundEffect | named_sound_effect | 64093.0ms
| GameStateChange | game_state_change | 64095.0ms
| GameStateChange | game_state_change | 64097.0ms
| NamedSoundEffect | named_sound_effect | 64100.0ms
| GameStateChange | game_state_change | 64102.0ms
| NamedSoundEffect | named_sound_effect | 64106.0ms
| GameStateChange | game_state_change | 64108.0ms
| NamedSoundEffect | named_sound_effect | 66110.0ms
| GameStateChange | game_state_change | 66112.0ms
| NamedSoundEffect | named_sound_effect | 66115.0ms
| GameStateChange | game_state_change | 66117.0ms
| NamedSoundEffect | named_sound_effect | 66120.0ms
| NamedSoundEffect | named_sound_effect | 66123.0ms
| GameStateChange | game_state_change | 66125.0ms
| NamedSoundEffect | named_sound_effect | 66128.0ms
| NamedSoundEffect | named_sound_effect | 66131.0ms
| NamedSoundEffect | named_sound_effect | 66135.0ms
| GameStateChange | game_state_change | 66137.0ms
| GameStateChange | game_state_change | 66140.0ms
| NamedSoundEffect | named_sound_effect | 66143.0ms
| GameStateChange | game_state_change | 66145.0ms
| GameStateChange | game_state_change | 66148.0ms
| GameStateChange | game_state_change | 66153.0ms
| NamedSoundEffect | named_sound_effect | 66156.0ms
| GameStateChange | game_state_change | 66159.0ms
| NamedSoundEffect | named_sound_effect | 66162.0ms
| NamedSoundEffect | named_sound_effect | 66165.0ms
| NamedSoundEffect | named_sound_effect | 66167.0ms
| NamedSoundEffect | named_sound_effect | 66172.0ms
| GameStateChange | game_state_change | 66174.0ms
| GameStateChange | game_state_change | 66177.0ms
| GameStateChange | game_state_change | 66180.0ms
| NamedSoundEffect | named_sound_effect | 66183.0ms
| NamedSoundEffect | named_sound_effect | 66185.0ms
| GameStateChange | game_state_change | 66187.0ms
| NamedSoundEffect | named_sound_effect | 66190.0ms
| NamedSoundEffect | named_sound_effect | 66193.0ms
| NamedSoundEffect | named_sound_effect | 66196.0ms
| GameStateChange | game_state_change | 66198.0ms
| NamedSoundEffect | named_sound_effect | 66201.0ms
| GameStateChange | game_state_change | 66203.0ms
| GameStateChange | game_state_change | 66208.0ms
| NamedSoundEffect | named_sound_effect | 66211.0ms
| NamedSoundEffect | named_sound_effect | 66213.0ms
| GameStateChange | game_state_change | 66216.0ms
| GameStateChange | game_state_change | 66218.0ms
| NamedSoundEffect | named_sound_effect | 66221.0ms
| NamedSoundEffect | named_sound_effect | 66225.0ms
| GameStateChange | game_state_change | 66227.0ms
| NamedSoundEffect | named_sound_effect | 66230.0ms
| GameStateChange | game_state_change | 66233.0ms
| GameStateChange | game_state_change | 66235.0ms
| NamedSoundEffect | named_sound_effect | 66238.0ms
| NamedSoundEffect | named_sound_effect | 66242.0ms
| GameStateChange | game_state_change | 66244.0ms
| NamedSoundEffect | named_sound_effect | 66249.0ms
| NamedSoundEffect | named_sound_effect | 66252.0ms
| GameStateChange | game_state_change | 66254.0ms
| NamedSoundEffect | named_sound_effect | 66257.0ms
| NamedSoundEffect | named_sound_effect | 66262.0ms
| GameStateChange | game_state_change | 66264.0ms
| EntityLook | entity_look | 66267.0ms
| NamedSoundEffect | named_sound_effect | 66270.0ms
| GameStateChange | game_state_change | 66272.0ms
| NamedSoundEffect | named_sound_effect | 66275.0ms
| GameStateChange | game_state_change | 66277.0ms
| GameStateChange | game_state_change | 66281.0ms
| GameStateChange | game_state_change | 66284.0ms
| NamedSoundEffect | named_sound_effect | 66287.0ms
| NamedSoundEffect | named_sound_effect | 66289.0ms
| GameStateChange | game_state_change | 66292.0ms
| NamedSoundEffect | named_sound_effect | 66295.0ms
| NamedSoundEffect | named_sound_effect | 66299.0ms
| NamedSoundEffect | named_sound_effect | 66301.0ms
| Chat | chat | 66944.0ms
| Chat | chat | 66984.0ms
| Chat | chat | 67033.0ms
| Chat | chat | 67074.0ms
| Chat | chat | 67114.0ms
| Chat | chat | 67153.0ms
| Chat | chat | 67194.0ms
| Chat | chat | 67275.0ms
| Chat | chat | 67378.0ms
| Chat | chat | 67453.0ms
| Chat | chat | 67504.0ms
| Chat | chat | 67637.0ms
| GameStateChange | game_state_change | 67653.0ms
| Advancements | advancements | 70820.0ms
| Experience | experience | 70822.0ms
| NamedSoundEffect | named_sound_effect | 70823.0ms
| NamedSoundEffect | named_sound_effect | 70833.0ms
| GameStateChange | game_state_change | 70835.0ms
| NamedSoundEffect | named_sound_effect | 70868.0ms
| GameStateChange | game_state_change | 70870.0ms
| NamedSoundEffect | named_sound_effect | 70873.0ms
| GameStateChange | game_state_change | 70875.0ms
| GameStateChange | game_state_change | 70877.0ms
| GameStateChange | game_state_change | 70882.0ms
| NamedSoundEffect | named_sound_effect | 70885.0ms
| NamedSoundEffect | named_sound_effect | 70887.0ms
| GameStateChange | game_state_change | 70889.0ms
| GameStateChange | game_state_change | 70892.0ms
| NamedSoundEffect | named_sound_effect | 70894.0ms
| NamedSoundEffect | named_sound_effect | 70899.0ms
| NamedSoundEffect | named_sound_effect | 70901.0ms
| NamedSoundEffect | named_sound_effect | 70903.0ms
| GameStateChange | game_state_change | 70906.0ms
| NamedSoundEffect | named_sound_effect | 70909.0ms
| NamedSoundEffect | named_sound_effect | 70911.0ms
| GameStateChange | game_state_change | 70913.0ms
| NamedSoundEffect | named_sound_effect | 70917.0ms
| GameStateChange | game_state_change | 70919.0ms
| GameStateChange | game_state_change | 70922.0ms
| GameStateChange | game_state_change | 70925.0ms
| NamedSoundEffect | named_sound_effect | 70928.0ms
| NamedSoundEffect | named_sound_effect | 70932.0ms
| NamedSoundEffect | named_sound_effect | 70935.0ms
| GameStateChange | game_state_change | 70937.0ms
| GameStateChange | game_state_change | 70940.0ms
| NamedSoundEffect | named_sound_effect | 70943.0ms
| GameStateChange | game_state_change | 70945.0ms
| GameStateChange | game_state_change | 70950.0ms
| NamedSoundEffect | named_sound_effect | 70953.0ms
| NamedSoundEffect | named_sound_effect | 70956.0ms
| NamedSoundEffect | named_sound_effect | 70959.0ms
| NamedSoundEffect | named_sound_effect | 70961.0ms
| NamedSoundEffect | named_sound_effect | 70964.0ms
| GameStateChange | game_state_change | 70966.0ms
| NamedSoundEffect | named_sound_effect | 70968.0ms
| GameStateChange | game_state_change | 70970.0ms
| NamedSoundEffect | named_sound_effect | 70973.0ms
| GameStateChange | game_state_change | 70975.0ms
| NamedSoundEffect | named_sound_effect | 70977.0ms
| GameStateChange | game_state_change | 70979.0ms
| NamedSoundEffect | named_sound_effect | 70982.0ms
| GameStateChange | game_state_change | 70984.0ms
| NamedSoundEffect | named_sound_effect | 71000.0ms
| GameStateChange | game_state_change | 71002.0ms
| GameStateChange | game_state_change | 71005.0ms
| GameStateChange | game_state_change | 71010.0ms
| NamedSoundEffect | named_sound_effect | 71013.0ms
| NamedSoundEffect | named_sound_effect | 71015.0ms
| GameStateChange | game_state_change | 71018.0ms
| NamedSoundEffect | named_sound_effect | 71020.0ms
| NamedSoundEffect | named_sound_effect | 71023.0ms
| NamedSoundEffect | named_sound_effect | 71027.0ms
| GameStateChange | game_state_change | 71029.0ms
| NamedSoundEffect | named_sound_effect | 71032.0ms
| NamedSoundEffect | named_sound_effect | 71034.0ms
| GameStateChange | game_state_change | 71036.0ms
| NamedSoundEffect | named_sound_effect | 71040.0ms
| GameStateChange | game_state_change | 71042.0ms
| NamedSoundEffect | named_sound_effect | 71047.0ms
| GameStateChange | game_state_change | 71050.0ms
| GameStateChange | game_state_change | 71053.0ms
| NamedSoundEffect | named_sound_effect | 71056.0ms
| GameStateChange | game_state_change | 71059.0ms
| NamedSoundEffect | named_sound_effect | 71062.0ms
| NamedSoundEffect | named_sound_effect | 71066.0ms
| GameStateChange | game_state_change | 71068.0ms
| NamedSoundEffect | named_sound_effect | 71071.0ms
| GameStateChange | game_state_change | 71073.0ms
| NamedSoundEffect | named_sound_effect | 71076.0ms
| NamedSoundEffect | named_sound_effect | 71081.0ms
| GameStateChange | game_state_change | 71083.0ms
| NamedSoundEffect | named_sound_effect | 71087.0ms
| GameStateChange | game_state_change | 71089.0ms
| NamedSoundEffect | named_sound_effect | 71093.0ms
| NamedSoundEffect | named_sound_effect | 71096.0ms
| GameStateChange | game_state_change | 71100.0ms
| NamedSoundEffect | named_sound_effect | 71103.0ms
| GameStateChange | game_state_change | 71105.0ms
| EntityTeleport | entity_teleport | 71109.0ms
| GameStateChange | game_state_change | 71111.0ms
| NamedSoundEffect | named_sound_effect | 71114.0ms
| NamedSoundEffect | named_sound_effect | 71119.0ms
| GameStateChange | game_state_change | 71122.0ms
| GameStateChange | game_state_change | 71125.0ms
| NamedSoundEffect | named_sound_effect | 71127.0ms
| NamedSoundEffect | named_sound_effect | 71130.0ms
| GameStateChange | game_state_change | 71132.0ms
| NamedSoundEffect | named_sound_effect | 71135.0ms
| GameStateChange | game_state_change | 71137.0ms
| NamedSoundEffect | named_sound_effect | 71140.0ms
| NamedSoundEffect | named_sound_effect | 71143.0ms
| NamedSoundEffect | named_sound_effect | 71146.0ms
| GameStateChange | game_state_change | 71148.0ms
| GameStateChange | game_state_change | 71153.0ms
| NamedSoundEffect | named_sound_effect | 71155.0ms
| GameStateChange | game_state_change | 71157.0ms
| NamedSoundEffect | named_sound_effect | 71160.0ms
| NamedSoundEffect | named_sound_effect | 71162.0ms
| GameStateChange | game_state_change | 71164.0ms
| GameStateChange | game_state_change | 71169.0ms
| NamedSoundEffect | named_sound_effect | 71172.0ms
| GameStateChange | game_state_change | 71174.0ms
| EntityLook | entity_look | 71176.0ms
| EntityTeleport | entity_teleport | 71179.0ms
| NamedSoundEffect | named_sound_effect | 71182.0ms
| NamedSoundEffect | named_sound_effect | 71186.0ms
| GameStateChange | game_state_change | 71188.0ms
| NamedSoundEffect | named_sound_effect | 71191.0ms
| NamedSoundEffect | named_sound_effect | 71194.0ms
| GameStateChange | game_state_change | 71196.0ms
| NamedSoundEffect | named_sound_effect | 71199.0ms
| NamedSoundEffect | named_sound_effect | 71203.0ms
| GameStateChange | game_state_change | 71206.0ms
| NamedSoundEffect | named_sound_effect | 71208.0ms
| GameStateChange | game_state_change | 71211.0ms
| GameStateChange | game_state_change | 71214.0ms
| GameStateChange | game_state_change | 71216.0ms
| NamedSoundEffect | named_sound_effect | 71218.0ms
| NamedSoundEffect | named_sound_effect | 71223.0ms
| NamedSoundEffect | named_sound_effect | 71225.0ms
| GameStateChange | game_state_change | 71228.0ms
| NamedSoundEffect | named_sound_effect | 71230.0ms
| GameStateChange | game_state_change | 71233.0ms
| NamedSoundEffect | named_sound_effect | 71235.0ms
| NamedSoundEffect | named_sound_effect | 71239.0ms
| NamedSoundEffect | named_sound_effect | 71242.0ms
| NamedSoundEffect | named_sound_effect | 71244.0ms
| NamedSoundEffect | named_sound_effect | 71247.0ms
| NamedSoundEffect | named_sound_effect | 71249.0ms
| NamedSoundEffect | named_sound_effect | 71254.0ms
| NamedSoundEffect | named_sound_effect | 71256.0ms
| NamedSoundEffect | named_sound_effect | 71259.0ms
| NamedSoundEffect | named_sound_effect | 71261.0ms
| NamedSoundEffect | named_sound_effect | 71263.0ms
| NamedSoundEffect | named_sound_effect | 71266.0ms
| NamedSoundEffect | named_sound_effect | 71270.0ms
| NamedSoundEffect | named_sound_effect | 71272.0ms
| NamedSoundEffect | named_sound_effect | 71275.0ms
| NamedSoundEffect | named_sound_effect | 71277.0ms
| NamedSoundEffect | named_sound_effect | 71279.0ms
| NamedSoundEffect | named_sound_effect | 71282.0ms
| NamedSoundEffect | named_sound_effect | 71287.0ms
| EntityTeleport | entity_teleport | 72718.0ms
| NamedSoundEffect | named_sound_effect | 72722.0ms
| NamedSoundEffect | named_sound_effect | 72726.0ms
| NamedSoundEffect | named_sound_effect | 72729.0ms
| NamedSoundEffect | named_sound_effect | 72732.0ms
| NamedSoundEffect | named_sound_effect | 72737.0ms
| NamedSoundEffect | named_sound_effect | 72740.0ms
| NamedSoundEffect | named_sound_effect | 72743.0ms
| NamedSoundEffect | named_sound_effect | 72748.0ms
| NamedSoundEffect | named_sound_effect | 72752.0ms
| NamedSoundEffect | named_sound_effect | 72755.0ms
| NamedSoundEffect | named_sound_effect | 72759.0ms
| NamedSoundEffect | named_sound_effect | 72762.0ms
| NamedSoundEffect | named_sound_effect | 72766.0ms
| NamedSoundEffect | named_sound_effect | 72771.0ms
| NamedSoundEffect | named_sound_effect | 72774.0ms
| NamedSoundEffect | named_sound_effect | 72776.0ms
| NamedSoundEffect | named_sound_effect | 72779.0ms
| NamedSoundEffect | named_sound_effect | 72783.0ms
| NamedSoundEffect | named_sound_effect | 72786.0ms
| NamedSoundEffect | named_sound_effect | 72790.0ms
| NamedSoundEffect | named_sound_effect | 72794.0ms
| NamedSoundEffect | named_sound_effect | 72796.0ms
| NamedSoundEffect | named_sound_effect | 72799.0ms
| NamedSoundEffect | named_sound_effect | 72802.0ms
| NamedSoundEffect | named_sound_effect | 72805.0ms
| NamedSoundEffect | named_sound_effect | 72810.0ms
| NamedSoundEffect | named_sound_effect | 72813.0ms
| NamedSoundEffect | named_sound_effect | 72815.0ms
| NamedSoundEffect | named_sound_effect | 72817.0ms
| NamedSoundEffect | named_sound_effect | 72821.0ms
| NamedSoundEffect | named_sound_effect | 72824.0ms
| NamedSoundEffect | named_sound_effect | 72828.0ms
| NamedSoundEffect | named_sound_effect | 72831.0ms
| NamedSoundEffect | named_sound_effect | 72834.0ms
| NamedSoundEffect | named_sound_effect | 72836.0ms
| NamedSoundEffect | named_sound_effect | 72839.0ms
| NamedSoundEffect | named_sound_effect | 72842.0ms
| NamedSoundEffect | named_sound_effect | 72847.0ms
| NamedSoundEffect | named_sound_effect | 72849.0ms
| NamedSoundEffect | named_sound_effect | 72852.0ms
| NamedSoundEffect | named_sound_effect | 72854.0ms
| NamedSoundEffect | named_sound_effect | 72857.0ms
| NamedSoundEffect | named_sound_effect | 72861.0ms
| NamedSoundEffect | named_sound_effect | 72865.0ms
| NamedSoundEffect | named_sound_effect | 72868.0ms
| NamedSoundEffect | named_sound_effect | 72870.0ms
| NamedSoundEffect | named_sound_effect | 72873.0ms
| NamedSoundEffect | named_sound_effect | 72875.0ms
| NamedSoundEffect | named_sound_effect | 72878.0ms
| NamedSoundEffect | named_sound_effect | 72882.0ms
| NamedSoundEffect | named_sound_effect | 72885.0ms
| NamedSoundEffect | named_sound_effect | 72888.0ms
| NamedSoundEffect | named_sound_effect | 72891.0ms
| NamedSoundEffect | named_sound_effect | 72894.0ms
| NamedSoundEffect | named_sound_effect | 72896.0ms
| NamedSoundEffect | named_sound_effect | 72901.0ms
| NamedSoundEffect | named_sound_effect | 72904.0ms
| NamedSoundEffect | named_sound_effect | 72907.0ms
| NamedSoundEffect | named_sound_effect | 72909.0ms
| EntityDestroy | entity_destroy | 72911.0ms
| PlayerInfo | player_info | 72914.0ms
| Chat | chat | 74234.0ms
| CloseWindow | close_window | 74237.0ms
| EntityDestroy | entity_destroy | 74239.0ms
| EntityDestroy | entity_destroy | 74243.0ms
| EntityDestroy | entity_destroy | 74245.0ms
| EntityDestroy | entity_destroy | 74248.0ms
| EntityDestroy | entity_destroy | 74250.0ms
| EntityDestroy | entity_destroy | 74252.0ms
| EntityDestroy | entity_destroy | 74254.0ms
| EntityDestroy | entity_destroy | 74259.0ms
| EntityDestroy | entity_destroy | 74261.0ms
| EntityDestroy | entity_destroy | 74263.0ms
| EntityDestroy | entity_destroy | 74265.0ms
| EntityDestroy | entity_destroy | 74267.0ms
| EntityDestroy | entity_destroy | 74269.0ms
| Abilities | abilities | 74271.0ms
| EntityUpdateAttributes | entity_update_attributes | 74274.0ms
| Respawn | respawn | 74472.0ms
| UpdateViewDistance | update_view_distance | 74474.0ms
| SimulationDistance | simulation_distance | 74476.0ms
| Position | position | 74479.0ms
| SpawnPosition | spawn_position | 74482.0ms
| Difficulty | difficulty | 74484.0ms
| Experience | experience | 74486.0ms
| InitializeWorldBorder | initialize_world_border | 74488.0ms
| SpawnPosition | spawn_position | 74491.0ms
| EntityStatus | entity_status | 74493.0ms
| UpdateViewDistance | update_view_distance | 74495.0ms
| SimulationDistance | simulation_distance | 74497.0ms
| UpdateViewPosition | update_view_position | 74499.0ms
| NamedEntitySpawn | named_entity_spawn | 74501.0ms
| EntityMetadata | entity_metadata | 74504.0ms
| EntityUpdateAttributes | entity_update_attributes | 74506.0ms
| EntityUpdateAttributes | entity_update_attributes | 74509.0ms
| WindowItems | window_items | 74513.0ms
| EntityUpdateAttributes | entity_update_attributes | 74515.0ms
| UpdateHealth | update_health | 74517.0ms
| HeldItemSlot | held_item_slot | 74520.0ms
| EntityStatus | entity_status | 74522.0ms
| GameStateChange | game_state_change | 74524.0ms
| Abilities | abilities | 74526.0ms
| Chat | chat | 74705.0ms
| PlayerInfo | player_info | 74707.0ms
| NamedEntitySpawn | named_entity_spawn | 74709.0ms
| EntityMetadata | entity_metadata | 74712.0ms
| EntityUpdateAttributes | entity_update_attributes | 74715.0ms
| Chat | chat | 74796.0ms
| PlayerInfo | player_info | 74799.0ms
| NamedEntitySpawn | named_entity_spawn | 74801.0ms
| EntityMetadata | entity_metadata | 74804.0ms
| EntityUpdateAttributes | entity_update_attributes | 74806.0ms
| Chat | chat | 75001.0ms
| PlayerInfo | player_info | 75003.0ms
| NamedEntitySpawn | named_entity_spawn | 75005.0ms
| EntityMetadata | entity_metadata | 75008.0ms
| EntityUpdateAttributes | entity_update_attributes | 75011.0ms
| Chat | chat | 75209.0ms
| PlayerInfo | player_info | 75212.0ms
| NamedEntitySpawn | named_entity_spawn | 75214.0ms
| EntityMetadata | entity_metadata | 75218.0ms
| EntityUpdateAttributes | entity_update_attributes | 75220.0ms
| Chat | chat | 75424.0ms
| PlayerInfo | player_info | 75426.0ms
| NamedEntitySpawn | named_entity_spawn | 75428.0ms
| EntityMetadata | entity_metadata | 75432.0ms
| EntityUpdateAttributes | entity_update_attributes | 75434.0ms
| Chat | chat | 75666.0ms
| PlayerInfo | player_info | 75669.0ms
| NamedEntitySpawn | named_entity_spawn | 75672.0ms
| EntityMetadata | entity_metadata | 75676.0ms
| EntityUpdateAttributes | entity_update_attributes | 75678.0ms
| Chat | chat | 76078.0ms
| PlayerInfo | player_info | 76080.0ms
| NamedEntitySpawn | named_entity_spawn | 76082.0ms
| EntityMetadata | entity_metadata | 76084.0ms
| EntityUpdateAttributes | entity_update_attributes | 76087.0ms
| Chat | chat | 76205.0ms
| PlayerInfo | player_info | 76207.0ms
| NamedEntitySpawn | named_entity_spawn | 76209.0ms
| EntityMetadata | entity_metadata | 76213.0ms
| EntityUpdateAttributes | entity_update_attributes | 76215.0ms
| Chat | chat | 76461.0ms
| PlayerInfo | player_info | 76463.0ms
| NamedEntitySpawn | named_entity_spawn | 76465.0ms
| EntityMetadata | entity_metadata | 76468.0ms
| EntityUpdateAttributes | entity_update_attributes | 76470.0ms
| Chat | chat | 76570.0ms
| PlayerInfo | player_info | 76573.0ms
| NamedEntitySpawn | named_entity_spawn | 76575.0ms
| EntityMetadata | entity_metadata | 76578.0ms
| EntityUpdateAttributes | entity_update_attributes | 76580.0ms
| Chat | chat | 76685.0ms
| Advancements | advancements | 76934.0ms
| UpdateHealth | update_health | 76936.0ms
| Experience | experience | 76938.0ms
| DeclareCommands | declare_commands | 77059.0ms
| EntityTeleport | entity_teleport | 77101.0ms
| EntityTeleport | entity_teleport | 77104.0ms
| EntityTeleport | entity_teleport | 77107.0ms
| EntityTeleport | entity_teleport | 77109.0ms
| EntityTeleport | entity_teleport | 77111.0ms
| EntityTeleport | entity_teleport | 77116.0ms
| EntityTeleport | entity_teleport | 77118.0ms
| EntityTeleport | entity_teleport | 77121.0ms
| EntityTeleport | entity_teleport | 77123.0ms
| EntityTeleport | entity_teleport | 77126.0ms
| EntityTeleport | entity_teleport | 77128.0ms
| KeepAlive | keep_alive | 80086.0ms
| EntityTeleport | entity_teleport | 80157.0ms
| EntityStatus | entity_status | 80173.0ms
| EntityMetadata | entity_metadata | 80217.0ms
| EntityMetadata | entity_metadata | 80863.0ms
| EntityStatus | entity_status | 80865.0ms
| EntityMetadata | entity_metadata | 80884.0ms
| EntityMetadata | entity_metadata | 81131.0ms
| EntityStatus | entity_status | 81133.0ms
| EntityMetadata | entity_metadata | 81136.0ms
| EntityMetadata | entity_metadata | 81139.0ms
| EntityStatus | entity_status | 81141.0ms
| EntityMetadata | entity_metadata | 81144.0ms
| EntityMetadata | entity_metadata | 81146.0ms
| EntityStatus | entity_status | 81148.0ms
| EntityMetadata | entity_metadata | 81151.0ms
| EntityMetadata | entity_metadata | 81154.0ms
| EntityStatus | entity_status | 81156.0ms
| EntityMetadata | entity_metadata | 81159.0ms
| EntityDestroy | entity_destroy | 81161.0ms
| PlayerInfo | player_info | 81163.0ms
| Chat | chat | 81165.0ms
| KickDisconnect | kick_disconnect | 81168.0ms
